2008-06-16  Miklos Szeredi <miklos@szeredi.hu>

	* Remove fuse kernel module sources.  Linux 2.6.27 will support
	NFS exporting.

2008-06-10  Miklos Szeredi <miklos@szeredi.hu>

	* Fix theoretical infinite loops in libfuse.  Reported by Szabolcs
	Szakacsits

	* Fix missing <sys/param.h> include for PATH_MAX.  Reported by
	Szabolcs Szakacsits

2008-05-23  Miklos Szeredi <miklos@szeredi.hu>

	* Fix mounting over symlink.  Reported by Szabolcs Szakacsits

2008-05-09  Miklos Szeredi <miklos@szeredi.hu>

	* Don't allow bigger than 4kB writes by default on 2.6.26 and
	later kernels, so that filesystems not expecting this are not
	broken on a kernel upgrade.  Provide a 'big_writes' mount option
	to enable this feature.  In future API revisions this may become
	the default.

2008-04-09  Miklos Szeredi <miklos@szeredi.hu>

	* Update warning message for missing newline at end of fuse.conf

	* Update debug message for successful operation to not include the
	string "error:"

2008-04-08  Miklos Szeredi <miklos@szeredi.hu>

	* Update error message for missing mountpoint parameter.  Reported
	by Allen Pulsifer

2008-04-04  Miklos Szeredi <miklos@szeredi.hu>

	* Print library version information to debug output

	* Highlevel lib: don't limit paths to 4095 characters

2008-03-25  Miklos Szeredi <miklos@szeredi.hu>

	* Fix memory leaks on mount.  Patch by Szabolcs Szakacsits

2008-03-19  Miklos Szeredi <miklos@szeredi.hu>

	* Fix missing pthread_mutex_destroy in error path of
	fuse_lib_opendir().  Patch by Szabolcs Szakacsits

2008-03-07  Miklos Szeredi <miklos@szeredi.hu>

	* Add queuing on contention to per-node lock algorithm, to avoid
	starvation.

	* Only enable cancelation when reading a request, otherwise
	cancellation could happen with a mutex held, which could hang the
	process on umount

2008-02-08  Miklos Szeredi <miklos@szeredi.hu>

	* Block SIGCHLD when executing mount and umount

	* fusexmp_fh: avoid unnecessary seeking in readdir

	* Update kernel interface to 7.9:
